# dgm-reactor-neutrino

./: .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  dagflow  multikeydict  pyproject.toml  requirements.txt
dgf_reactoranueosc/: EeToEnu.py  IBDXsecVBO1.py  IBDXsecVBO1Group.py  InverseSquareLaw.py  Jacobian_dEnu_dEe.py  NueSurvivalProbability.py  __init__.py
reactornueosc/: EeToEnu.py  IBDXsecO1.py  IBDXsecO1Group.py  IBDXsecVBO1.py  IBDXsecVBO1Group.py  InverseSquareLaw.py  Jacobian_dEnu_dEe.py  NueSurvivalProbability.py
src/dgm_reactor_neutrino/: ee_to_enu.py  ibd_xsec_sv.py  ibd_xsec_vb_o1.py  ibd_xsec_vb_o1_group.py  inverse_square_law.py  jacobian_d_enu_d_ee.py  nue_survival_probability.py
test/dgf-reactoranueosc/: test_IBDXsecO1.py  test_IBDXsecO1Group.py  test_InverseSquareLaw.py  test_NueSurvivalProbability.py
test/reactornuosc/: test_IBDXsecO1.py  test_IBDXsecO1Group.py  test_InverseSquareLaw.py  test_NueSurvivalProbability.py
tests/: test_ibd_xsec_sv.py  test_ibd_xsec_vb_01.py  test_ibd_xsec_vb_01_group.py  test_inverse_square_law.py  test_nue_survival_probability.py
tests/dgf-reactoranueosc/: test_IBDXsecO1.py  test_IBDXsecO1Group.py  test_InverseSquareLaw.py  test_NueSurvivalProbability.py
tests/dgm_reactor_neutrino/: test_ibd_xsec_vb_01.py  test_ibd_xsec_vb_01_function.py  test_ibd_xsec_vb_01_group.py  test_inverse_square_law.py  test_nue_survival_probability.py
tests_sv/: test_idd_xsec_sv.py
